ch19/stu-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: student
  name: student
  namespace: istio-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student
  template:
    metadata:
      labels:
        app: student
    spec:
      containers:
        - image: 192.168.10.127:5000/new-energy/student:0.3
          name: student
          ports:
            - containerPort: 8080
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: student
  name: student
  namespace: istio-dev
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: student
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: student
  namespace: istio-dev
spec:
  hosts:
    - student
  http:
    - route:
      - destination:
          host: student
      #retries:
      #  attempts: 3
      #  perTryTimeout: 1s
      timeout: 3s
