ch19/virtual-service-ratings-debug.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: istio-dev
spec:
  hosts:
    - ratings
  http:
    - route:
      - destination:
          host: ratings
          subset: v1
      fault:
        delay:
          percent: 100
          fixedDelay: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
